<resources>
    <string name="app_name">WEZY</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="celsius">Celsius °C</string>
    <string name="kelvin">kelvin °K</string>
    <string name="fahrenheit">Fahrenheit °F</string>
    <string name="gps">Gps</string>
    <string name="map">Map</string>
    <string name="meter_sec">meter/sec</string>
    <string name="mile_hour">mile/hour</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="language">Language</string>
    <string name="temp_unit">Temp Unit</string>
    <string name="location">Location</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="alarm">Alarm</string>
    <string name="cantFindCountyName">can not find Country name</string>
    <string name="default_language">Default</string>
    <string name="cant_find_country_name">can not find country name</string>
    <string name="sunset">🌇 Sunset</string>
    <string name="sunrise">🌅 Sunrise</string>
    <string name="divider" translatable="false">.</string>
    <string name="placeHolderFeelsTemp" translatable="false">32</string>
    <string name="placeHolderTemp" translatable="false">28</string>
    <string name="placeHolderDate" translatable="false">set, 3 Aug</string>
    <string name="feels_like">✨ Feels like</string>
    <string name="placeHolderTempUnit" translatable="false">°C</string>
    <string name="placeHolderLocation" translatable="false">cairo, egypt</string>
    <string name="placeHolderTime" translatable="false">20:10</string>
    <string name="light_rain">Light rain</string>
    <string name="percent">%</string>
    <string name="ultraviolet">Ultraviolet</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="m_h">m/h</string>
    <string name="km">km</string>
    <string name="pressure">Pressure</string>
    <string name="hpa">hpa</string>
    <string name="weather_icon">weather icon</string>
    <string name="hourly">Hourly</string>
    <string name="day">Daily</string>
    <string name="details">Details</string>
    <string name="next">Next</string>
    <string name="_7_days">7 Days</string>
    <string name="select_location">select location</string>
    <string name="locatoin_not_selected">location Not selected yet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_here">Search here</string>
    <string name="please_wait">please wait …</string>
    <string name="preparing_your_weather_details">preparing your weather details</string>
    <string name="inform_me_with">Notify me by</string>
    <string name="alert">Alarm</string>
    <string name="start_duration">Start duration</string>
    <string name="end_duration">End duration</string>
    <string name="from_now">From Now</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="happy_title">WEZY has good news for you 😊</string>
    <string name="happy_body">there is no bad alerts for this duration,
hope you enjoy the rest of your day</string>
    <string name="looks_like_you_haven_t_set_a_location_yet">Looks like you haven\'t set a location yet</string>
    <string name="set_my_location_by">Set my location by</string>
    <string name="you_haven_t_any_alarms">You haven\'t any alarms</string>
    <string name="you_haven_t_any_favorites">You haven\'t any favorites</string>
    <string name="start">Start from</string>
    <string name="end_in">To</string>
    <string name="loading">Loading. Please wait…</string>
    <string name="remove_location_done">remove location done successfully</string>
    <string name="remove_alert_done_successfully">remove alert done successfully</string>
    <string name="no_weather_ws_found">No Weather Was Found</string>
    <string name="server_error">server error</string>
    <string name="we_cant_create_without_internet">we can not create favorite without internet</string>
    <string name="cant_get_country_name">can not get country name but location added successfully</string>
    <string name="clouds">Clouds</string>
    <string name="overlay_permission">we can not create alert without accept overlay permission</string>
</resources>