<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tooltipText="ahmed">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/switchLanguage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/onPrimary"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView

                            android:id="@+id/profile_image_Lang"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_google_translate"
                            android:tint="#000"
                            app:civ_border_color="@color/purple_700"
                            app:civ_border_width="7dp"
                            app:civ_circle_background_color="@color/purple_700" />

                        <TextView
                            android:id="@+id/textViewLang"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/language"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/rgLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation='horizontal'
                        android:paddingHorizontal="10dp">


                        <RadioButton
                            android:id="@+id/rbArabic"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:checked="true"
                            android:text="@string/arabic"
                            android:textSize="16sp"
                            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

                        <RadioButton
                            android:id="@+id/rbEnglish"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/english"
                            android:textSize="16sp"
                            tools:ignore="TouchTargetSizeCheck" />

                        <RadioButton
                            android:id="@+id/rbDefaultLanguage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minHeight="48dp"
                            android:text="@string/default_language"
                            android:textSize="16sp" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/switchTempUnit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/onPrimary"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView

                            android:id="@+id/profile_image"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_temperature"
                            android:tint="#000"
                            app:civ_border_color="#E91E63"
                            app:civ_border_width="7dp"
                            app:civ_circle_background_color="#E91E63" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/temp_unit"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/rgTempUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation='horizontal'
                        android:paddingHorizontal="10dp">


                        <RadioButton
                            android:id="@+id/rbCelsius"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.2"
                            android:minHeight="48dp"
                            android:text="@string/celsius"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rbKelvin"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minHeight="48dp"
                            android:text="@string/kelvin"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rbFahrenheit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.2"
                            android:minHeight="48dp"
                            android:text="@string/fahrenheit"
                            android:textSize="16sp" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/switchLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/onPrimary"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView

                            android:id="@+id/profile_image_location"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_location"
                            android:tint="#000"
                            app:civ_border_color="#FF9800"
                            app:civ_border_width="7dp"
                            app:civ_circle_background_color="#FF9800"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textViewLocation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/location"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/rgLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation='horizontal'
                        android:paddingHorizontal="10dp">


                        <RadioButton
                            android:id="@+id/rbGps"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minHeight="48dp"

                            android:text="@string/gps"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rbMap"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:minHeight="48dp"
                            android:text="@string/map"
                            android:textSize="16sp" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/switchWindSpeed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/onPrimary"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView

                            android:id="@+id/profile_image_WindSpeed"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_wind_speed"
                            android:tint="#000"
                            app:civ_border_color="#9C27B0"
                            app:civ_border_width="7dp"
                            app:civ_circle_background_color="#9C27B0" />

                        <TextView
                            android:id="@+id/textViewWindSpeed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/wind_speed_unit"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/rgWindSpeedUnit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation='horizontal'
                        android:paddingHorizontal="10dp">


                        <RadioButton
                            android:id="@+id/rbMBS"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minHeight="48dp"

                            android:text="@string/meter_sec"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rbMBH"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:minHeight="48dp"
                            android:text="@string/mile_hour"
                            android:textSize="16sp" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/switchNotification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:visibility="gone"
                app:cardBackgroundColor="#77250163"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView

                            android:id="@+id/profile_image_Notification"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/ic_notification"
                            android:tint="#000"
                            app:civ_border_color="#009688"
                            app:civ_border_width="7dp"
                            app:civ_circle_background_color="#009688" />

                        <TextView
                            android:id="@+id/textViewNotification"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/notification"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <RadioGroup
                        android:id="@+id/rgNotification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation='horizontal'
                        android:paddingHorizontal="10dp">


                        <RadioButton
                            android:id="@+id/rbEnable"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"

                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:minHeight="48dp"
                            android:text="@string/enable"
                            android:textSize="16sp" />

                        <RadioButton
                            android:id="@+id/rbDisable"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:minHeight="48dp"
                            android:text="@string/disable"
                            android:textSize="16sp" />
                    </RadioGroup>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>