<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/surfaceColor"
    android:padding="20dp"
   >


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="From"
        android:textColor="#AFAEAE" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/onSurface"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/ic_add_time" />

            <EditText
                android:id="@+id/etFromTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="#00000000"
                android:cursorVisible="false"
                android:focusable="false"
                android:ems="10"
                android:hint="@string/from"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@string/from_now" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="To"
        android:textColor="#AFAEAE" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/onSurface"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/ic_add_end_time" />

            <EditText
                android:id="@+id/etToTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:backgroundTint="#00000000"
                android:cursorVisible="false"
                android:focusable="false"
                android:ems="10"
                android:hint="@string/to"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#AFAEAE" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/rgInformWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/inform_me_with" />

        <RadioButton
            android:id="@+id/rbAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:minHeight="48dp"
            android:text="@string/alert" />

        <RadioButton
            android:id="@+id/rbNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:minHeight="48dp"
            android:text="@string/notification"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="#E91E63"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>